<resources>
    <string name="app_name">Quebec Taxes</string>
    <string name="price_with_taxes">Price With Taxes :</string>
    <string name="total_taxes">Total Taxes :</string>
    <string name="gst">GST :</string>
    <string name="pst">PST :</string>
    <string name="price">Price :</string>
    <string name="quebec_gst_taxe">Quebec GST Taxe :</string>
    <string name="quebec_pst_taxe">Quebec PST Taxe :</string>
    <string name="_0_09975">0.09975</string>
    <string name="_0_05">0.05</string>
    <string name="_0_00">0.00</string>
    <string name="button">CALCULATE</string>
</resources>
